# soroban-budget-assert

./: .gitbook.yaml  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXNOED_EXPLAINED.md  LICENSE  MEASUREMENTS.md  PR_SUMMARY_feat_real_amm_pool_fixture.md  README.md  SECURITY.md  audit_and_roadmap.md  budget.toml  clippy.toml  contributing.html  create_issues.py  create_issues.sh  demo.cast  developer_guide.html  fix_issues.py  glossary.html  history.json  index.html  issues_creation.md  mechanics.html  print.html  project_log.md  record_demo.sh  reference.html  rustfmt.toml  searcher-09f2665d.js  searchindex-088fee11.js  searchindex-28f75438.js  searchindex-353884d5.js  searchindex-4a7f4e70.js  searchindex-57b7c65d.js  searchindex-6e257ea5.js  searchindex-70a660d0.js  searchindex-70b8546a.js  (+10 more)
.github/workflows/: budget.yml  deploy-site.yml  docs.yml  quality.yml  release.yml
amm-pool-contract/: Cargo.toml
amm-pool-contract/src/: lib.rs
amm-pool-contract/test_snapshots/: test_budget_macro_dynamic_env.1.json  test_budget_macro_gated.1.json  test_budget_macro_mem_deliberate_regression.1.json  test_budget_wasm.1.json  test_write_bytes_budget_passes.1.json  test_write_bytes_budget_regression.1.json
amm-pool-contract/tests/: budget_test.rs
budget-macros/: Cargo.toml
budget-macros/src/: lib.rs
cargo-budget-report/: Cargo.toml
cargo-budget-report/fixtures/: transaction_data_valid.json
cargo-budget-report/src/: lib.rs  main.rs
cargo-budget-report/tests/: integration.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  contributing.md  developer_guide.md  glossary.md  mechanics.md  reference.md  user_guide.md
docs/src/site/: index.html
example-contract/: Cargo.toml
example-contract/src/: lib.rs
example-contract/test_snapshots/: test_budget_macro_dynamic_env_fallback.1.json  test_budget_raw_rust.1.json  test_budget_wasm.1.json
example-contract/tests/: budget_test.rs
scripts/: generate_issues.sh  package-lock.json  package.json  test_network.js
site/: README.md  dashboard.html  index.html  styles.css
site/assets/: dashboard.css  dashboard.js
