[workspace]
members = [
    "budget-macros",
    "cargo-budget-report",
    "amm-pool-contract",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Tollcraft/soroban-budget-assert"
readme = "README.md"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

