[package]
name = "budget-macros"
version.workspace = true
edition.workspace = true
description = "Proc-macro crate providing budget assertion attributes for Soroban contract tests."
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
