[package]
name = "cargo-budget-report"
version.workspace = true
edition.workspace = true
description = "Cargo subcommand that reports Soroban smart-contract resource costs across a workspace."
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.14"
stellar-xdr = { version = "22.1.0", features = ["std"] }
base64 = "0.21.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.103"
toml = "0.8"
cargo_metadata = "0.18"
wasmparser = "0.116.1"
indicatif = "0.17.8"
sha2 = "0.10"
hex = "0.4"
